app/assets/stylesheets/less/_page.less
/* ... */
.content-footer {
    padding: 10px 20px;
    background-color: #f5f5f5;
    .border-radius(5px);
}

.post-list-wrap {
    list-style: none;

    &.notice-wrap {
        background-color: #F7F7F7;
        border: 1px solid #ccc;
        .border-radius(6px);

        li:last-child {
            border:none;
        }
        clear: both;
    }

    .label-notice {
        background-color: #51aacc;
    }
}

label.issue-item-row {
    display: block;
    margin:0;
}

.post-item {
    padding:10px;
    border-bottom:1px solid #ddd;
    display:block;
    overflow: auto;
    clear: both;

    &.active {
        background-color:#F5F5F5 !important;
    }

    .mass-update-check {
        vertical-align: middle;
        text-align:center;
        float:left;
        margin-right:15px;

        input {
            margin-top:15px;
        }
    }

    .avatar-wrap {
        margin-right:10px;
        float: left;

        &.assinee {
            margin-right:0;
        }
    }

    .title-wrap {
        display:block;
        line-height: 20px;
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
        position: relative;

        .post-id {
            color:#999;
            margin-right:5px;
            font-size: 13px;
            font-weight: bold;
        }

        .title {
            color: #333;
            font-size: 15px;
            font-weight: 600;

            &.project {
                color:#3592b5;
                margin-right: 10px;
            }

            &:hover {
                color:#3592b5;
                text-decoration: none;
            }

            &.name {
                color : #333;

                &:hover {
                    color:#333;
                }
            }

            &.conflict {
                color: #b94a48;

                &:hover {
                    color: #b94a48;
                }
            }

        }
    }

    .infos {
        display:block;
        line-height: 20px;
        font-size:12px;
        color:#999;

        .infos-item {
            margin-right:6px;
            float:left;

            &.project-name {
                color:#51aacc;
            }

            &.infos-link-item {
                &:hover {
                    color:#3592b5;
                    text-decoration: none;
                }
            }

            &.infos-icon-link {
                color:#3592b5;

                i {vertical-align: middle;}

                .size {margin-right:3px;}
                .total {color:#777;}

                &:hover {
                    color:#3592b5;
                    text-decoration: none;
                }
                &.open   {
                    color:@state-open !important;
                }
                &.closed {
                    color:@state-closed !important;
                    .total { color:inherit !important; }
                }
            }

            &.infos-sympathy {
                color:@yobi-orange-dark !important;
                font-weight: bold;
            }

            .upload-progress {
                display: inline-block;
                width: 30px;
                vertical-align: middle;
                overflow: hidden;
                margin-top: 3px;
                .border-radius(5px);

                .bar { height:100%; }
            }

            .infos-icon { color:#777; margin-right:2px; }

            &.over {
                color:@yobi-primary !important;
                .infos-icon { color:@yobi-primary; }
            }
        }
    }
}

.item-count-groups {
    border:1px solid #EEE;
    .border-radius(3px);
    line-height: 14px;
    margin-top:2px;
    .comments-count:hover {
        color: lighten(@darkmagenta, 10%);
    }
    .vote-count:hover {
        color: lighten(@primary, 10%);
    }
    .vote-color {
        color: @primary;
    }
    .comments-count-color {
        color: @darkmagenta;
    }
    .sharer-color {
        color: @green;
    }

    a:nth-child(2) {
        margin-left: -5px;
    }

    a:nth-child(3) {
        margin-left: -5px;
    }

    .count-groups {
        margin:0 auto;
        display:inline-block;
        text-align: center;
        padding:0 5px;

        &.item-icon {
            font-size: 9px;
            padding-top:2px;
            line-height: 12px;
            border-left:1px solid #EEE;

            &:first-child {
                border-left:none;
            }
        }

        &.item-count {
            padding:0 5px 0 0;
        }
    }
}

.state {
    margin-right:16px;
    margin-top:7px;
    font-weight:bold;
    color:#FFF;
    padding:5px 12px;
    .border-radius(15px);

    &.merged { background-color: @state-merged;}
    &.open { background-color: @state-open; }
    &.closed { background-color : @state-closed;}
    &.rejected { background-color : @state-rejected;}
    &.conflict {background: #C0392B;}
}

.empty-avatar-wrap {
    width:32px;
    height:32px;
}

.mileston-tag {
    max-width: 135px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    color: #2196f3;
    font-size:11px;
    .border-radius(6px);
}

.overdue {
    color:@yobi-red;
}

.pullRequest-branchInfo {
    code {
        border:none;
        background: transparent;
        color: @yobi-cyan-dark;
        padding: 0;

        a {
            color: @yobi-cyan-dark;
            &.branchName { color:@yobi-cyan; }
        }
    }

    i { font-size:12px; margin:0 5px; color: @yobi-cyan-dark; }
}
/* ... */

